--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,11 @@
     "content_scripts": [
         {
             "matches": [
-                "https://*.youtube.com/*"
+                "https://*.youtube.com/*",
+                "https://*.schoology.com/*"
             ],
             "js": [
-                "youtube.js"
+                "speedUp.js"
             ]
         }
     ]
